Fix hero image position on mobile: raise image from 70% to 50%

--- a/style.css
+++ b/style.css
@@ -2796,7 +2796,7 @@ ul, ol {
   }
 
   .hero__bg img {
-    object-position: center 70%;
+    object-position: center 50%;
     transform: none;
   }
 
